@@ -3,6 +3,7 @@ $Id$
 1.4.5 TBD
 
 * automatically determine groups from the Nagios servicegroup definitions.
+* fixed heartbeats/stepsizes/resolutions bug.  this time for real.  really.
 * retain a copy of any modifications made to nagios.cfg and commands.cfg when
    removing rpm or deb packages.
 * fixed install.pl to work with icinga.
